force-app/main/default/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <description>Объект Answer содержит ответ пользователя на определенный вопрос. Связан с Question и ссылается на GroupAnswer.</description>
    <label>Answer</label>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>