force-app/main/default/objects/Answer__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>