force-app/main/default/objects/Answer__c/fields/Group_Answer__c.field-meta.xml
<CustomField>
    <fullName>Group_Answer__c</fullName>
    <label>Group Answer</label>
    <referenceTo>Group_Answer__c</referenceTo>
    <relationshipLabel>Anwers</relationshipLabel>
    <relationshipName>Anwers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>